# docLogger

./: .gitignore  CMakeLists.txt  README.md  clearLog.bat  main.cpp
Documentation/: GettingStarted.md  TableOfContent.md
UnitTest/: docLoggerTest.cpp  formatLogTest.cpp  logSeverityTest.cpp  optionsTest.cpp  rLoggerTest.cpp
cpp/: CMakeLists.txt
cpp/Documentation/: TableOfContent.md
cpp/UnitTest/: docLoggerTest.cpp  logSeverityTest.cpp  optionsTest.cpp
cpp/docViewerLog/: icon.rc
cpp/src/Logger/: Logger.cpp  LoggerOptions.cpp  LoggerSeverity.cpp  Logger_severityMethods.cpp
cpp/src/Logger/include/: DLL_API.h  Logger.h  LoggerOptions.h  ThreadIDFormatter.h  docLogger
cpp/src/Logger/include/doc/: Logger.h  LoggerOptions.h  ThreadIDFormatter.h
cpp/src/TaskManager/: taskManager.cpp  taskManager.h
go/: Logger.go
go/docLogger/: LoggerConstructor.go  LoggerOptions.go  LoggerOptions_build.go  LoggerSeverity.go  LoggerStruct.go  Logger_severityMethods.go
rViewerLog/: rViewerLog.cpp
src/Logger/: Logger.cpp  Logger.h  LoggerOptions.cpp  LoggerOptions.h  LoggerSeverity.cpp  Logger_severityMethods.cpp  rLogger.cpp  rLogger.h  rLoggerOptions.h
src/Logger/Include/: DLL_API.h  Logger.h  LoggerOptions.h  LoggerSeverity.h
src/Profiler/: Profiler.cpp  Profiler.h  ProfilerTimer.cpp  ProfillerTimer.h  TraceEvent.h
src/TaskManager/: main.cpp  taskManager.cpp  taskManager.h
src/rLogger/: rLogger.cpp  rLogger.h  rLoggerOptions.cpp  rLoggerOptions.h  rLoggerSeverity.cpp  rLoggerSeverity.h  rLogger_severityFunc.cpp  rLogger_severityMethods.cpp
